Major merge after some git foo
* Most WIP; still working on making sure that the new hub/spoke/org
  stuff will not break all the things
* This will be a sensitive commit as it will break host config
  compatibility
* +semver: minor
