# common/models.py
@@ -1,6 +1,6 @@
 # generated by datamodel-codegen:
 #   filename:  swagger.yaml
-#   timestamp: 2022-03-25T16:44:46+00:00
+#   timestamp: 2022-03-30T19:03:55+00:00
 
 from __future__ import annotations
 
@@ -612,13 +612,13 @@ class SpokeAccount(BaseModel):
         description="Customer-specified or default spoke account name (NoqSpokeRole); note this must be unique for each account",
     )
     account_id: str = Field(..., description="AWS account id")
-    role_arn: str = Field(..., description="ARN of the spoke role")
-    external_id: str = Field(
-        ...,
+    role_arn: Optional[str] = Field(None, description="ARN of the spoke role")
+    external_id: Optional[str] = Field(
+        None,
         description="Designated external identifier to provide a safeguard against brute force attempts",
     )
-    hub_account_arn: str = Field(
-        ..., description="Links to the designated hub role ARN"
+    hub_account_arn: Optional[str] = Field(
+        None, description="Links to the designated hub role ARN"
     )
     master_for_account: Optional[bool] = Field(
         False,
@@ -632,8 +632,8 @@ class OrgAccount(BaseModel):
         description="A unique identifier designating the identity of the organization",
     )
     account_id: str = Field(..., description="AWS account id")
-    account_name: str = Field(..., description="AWS account name")
-    owner: str = Field(..., description="AWS account owner")
+    account_name: Optional[str] = Field(None, description="AWS account name")
+    owner: Optional[str] = Field(None, description="AWS account owner")
 
 
 class GoogleOIDCSSOIDPProvider(BaseModel):
@@ -792,8 +792,7 @@ class CognitoAccounts(BaseModel):
 
 class ChallengeUrl(BaseModel):
     enabled: Optional[bool] = Field(
-        None,
-        description="Whether Weep can be used to automate authentication to the system",
+        None, description="Whether CLI authentication via Challenge URL is enabled"
     )
 
 
