# common/util/swagger.yaml
@@ -2062,9 +2062,6 @@ components:
       required:
         - name
         - account_id
-        - role_arn
-        - external_id
-        - hub_account_arn
       properties:
         name:
           type: string
@@ -2090,8 +2087,6 @@ components:
       required:
         - org_id
         - account_id
-        - account_name
-        - owner
       properties:
         org_id:
           type: string
